--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon src/index.js",
     "start": "node index.js",
-   "docs":"node-e\"console.log('Swagger docs en http://localhost:3000/api-docs')\"",
+    "docs": "node-e\"console.log('Swagger docs en http://localhost:3000/api-docs')\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.42.0",
     "axios": "^1.13.5",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
